[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ms_pcode_assembler"
version = "0.0.1"
authors = [
  { name="Kevin Nowaczyk", email="beakerboy99@yahoo.com" },
]
description = "Create the performance cache for a vbaProject.bin file from VBA source files."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[project.optional-dependencies]
tests = [
  'coveralls',
  'pytest',
  'pytest-cov',
]
[project.urls]
"Homepage" = "https://github.com/Beakerboy/MS-Pcode-Assembler"
"Bug Tracker" = "https://github.com/Beakerboy/MS-Pcode-Assembler/issues"

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = [
    "tests",
]
